# truscholar-server

./: .editorconfig  .env  .env.development  .env.test  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements-minimal.txt  requirements-test.txt  requirements.txt  test_app.py
data/careers/: career_database.json  noc_mapping.json  onet_mapping.json
data/prompts/v1.0/: career_prompts.json  question_prompts.json  report_prompts.json
docker/: docker-compose.yml
docker/api/: Dockerfile
docs/business/: career_mapping.md  raisec_methodology.md  scoring_algorithm.md
scripts/setup/: seed_prompts.py
src/api/: dependencies.py  main.py
src/api/middleware/: error_handler.py  logging_middleware.py  rate_limiter.py  request_id.py
src/cache/: __init__.py  cache_keys.py  cache_manager.py  decorators.py
src/core/: config.py  dependencies.py  events.py  security.py  setting.py
src/database/: connection_pool.py  mongodb.py  redis_client.py
src/langchain_handlers/: __init__.py  career_recommender.py  question_generator.py  validation.py
src/langchain_handlers/chains/: __init__.py  career_chain.py  question_chain.py  report_chain.py
src/langchain_handlers/parsers/: __init__.py  career_parser.py  question_parser.py  report_parser.py
src/langchain_handlers/prompts/: __init__.py  career_prompts.py  question_prompts.py  report_prompts.py
src/llm/: __init__.py  anthropic_llm.py  base_llm.py  fallback_handler.py  gemini_llm.py  llm_factory.py  openai_llm.py  prompt_manager.py
src/models/: answer.py  base.py  career.py  prompt.py  question.py  report.py  test.py  user.py
src/routers/: __init__.py  auth.py  careers.py  health.py  questions.py  tests.py  users.py
src/schemas/: __init__.py  answer_schemas.py  auth_schemas.py  base.py  career_schemas.py  question_schemas.py  response_schemas.py  test_schemas.py  user_schemas.py
src/services/: answer_service.py  auth_service.py  career_service.py  notification_service.py  question_service.py  scoring_service.py  test_service.py  user_service.py
src/static_questions/age_13_17/: mcq.json  plot_day.json  scale_rating.json  scenario_mcq.json  scenario_multi_select.json  statement_set.json  this_or_that.json
src/static_questions/age_18_25/: mcq.json  plot_day.json  scale_rating.json  scenario_mcq.json  scenario_multi_select.json  statement_set.json  this_or_that.json
src/static_questions/age_26_35/: mcq.json  plot_day.json  scale_rating.json  scenario_mcq.json  scenario_multi_select.json  statement_set.json  this_or_that.json
src/utils/: __init__.py  constants.py  datetime_utils.py  enums.py  exceptions.py  formatters.py  helper.py  helpers.py  logger.py  validators.py
tests/integration/test_api/: test_career_endpoints.py  test_question_endpoints.py  test_test_endpoints.py
tests/integration/test_langchain/: test_question_generation.py
tests/unit/test_llm/: test_fallback_handler.py  test_llm_factory.py
tests/unit/test_services/: test_answer_service.py  test_career_service.py  test_question_service.py  test_scoring_service.py  test_test_service.py
tests/unit/test_utils/: test_validators.py
